Fix the service detail sections on mobile.
Height now flexes to fit the content.

--- a/jekyllversion/ccmsite/assets/css/style.css
+++ b/jekyllversion/ccmsite/assets/css/style.css
@@ -75,7 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   margin-top: 0;
   margin-bottom: 0.3em;
 }
@@ -359,11 +359,12 @@ section.music_release, section.music_resource {
 }
 
 section.service {
-  height: 50vh;
+  height: auto;
 }
 
 @media only screen and (min-width: 640px) {
   section.service {
+    height: 50vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "image servicecontent";
@@ -391,6 +392,12 @@ section.service img {
   height: 50vh;
   grid-area: image;
   object-fit: cover;
+}
+
+@media only screen and (max-width: 640px) {
+  section.service img {
+    width: calc(100vw - var(--general-padding) - var(--general-padding));
+  }
 }
 
 section.service .service-info {
